Bug 1957119 - part1 : correct SPSIterator::IsValid(). r=media-playback-reviewers,jolin a=pascalc

In H265::CompareExtraData(), SPSIterator::IsValid() is used as a
boolean expression to determine whether two SPS NALUs should be
compared. If it returns an incorrect result, it can lead to a false
detection of a configuration change, causing decoded frames to be
discarded.

Differential Revision: https://phabricator.services.mozilla.com/D243528